--- a/css/style.css
+++ b/css/style.css
@@ -248,14 +248,6 @@ a {
     text-align: center;
 }
 
-/* Footer */
-#main-footer {
-    text-align: center;
-    background: #444;
-    color: #fff;
-    padding: 20px;
-}
-
 /* Rooms Images */
 .image-container {
     color: #555555;
@@ -289,9 +281,66 @@ a {
     text-align: center;
     width: 33%;
   }
+
   .image-3 img {
     width: 100%;
     height: 300px;
     display: inline-block;
     text-align: center;
   }
+
+/* Contact Page */
+.ContactUs {
+    padding: 3% 2%;
+}
+
+.ContactUs p {
+    padding-top: 2%;
+}
+
+.myform {
+    padding: 30px;
+  }
+  
+  textarea {
+    width: 95%;
+    height: 150px;
+  }
+  
+  .spacing label {
+    display: block;
+  }
+  
+  .spacing {
+    padding-bottom: 30px;
+  }
+  
+  .spacing input {
+    padding: 10px;
+    width: 95%;
+  }
+  
+  .container {
+    width: 90%;
+    margin: auto;
+  }
+  
+  button {
+    background-color: #444;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+  }
+
+  .bg-contact {
+    background: #333;
+    color: #fff;
+}
+
+/* Footer */
+#main-footer {
+    text-align: center;
+    background: #444;
+    color: #fff;
+    padding: 20px;
+}
