--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ a {
 }
 
 #navbar ul li a {
-    display: block;
+    display: inline-block;
     padding: 20px;
     text-align: center;
 }
@@ -121,20 +121,18 @@ a {
   }
 
   .dropbtn a {
-      display:inline-block!;
+      display:inline-block;
+      line-height: inherit;
   }
   
   .dropdown-content {
     display: none;
     position: absolute;
     background-color: #333;
-    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
   }
   
   .dropdown-content a {
-    float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
